force-app/main/default/objects/Community_Profile_Tag__c/Community_Profile_Tag__c.object-meta.xml
<CustomObject>
    <description>This object allows contacts to select Tags to define their interests in the Community.</description>
    <label>Community Profile Tag</label>
    <nameField>
        <displayFormat>CCT-{yy}{mm}{0}</displayFormat>
        <label>Community Profile Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profile Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>