force-app/main/default/objects/Community_Profile_Tag__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>determines if profile tag is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>