force-app/main/default/objects/Community_Profile_Tag__c/fields/Community_Tag__c.field-meta.xml
<CustomField>
    <fullName>Community_Tag__c</fullName>
    <description>Defines the tags that will be associated to the Contact record.</description>
    <label>Community Tag</label>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>Users Tagged</relationshipLabel>
    <relationshipName>Community_Users_Tagged</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>