force-app/main/default/objects/Community_Profile_Tag__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Allows tags to be associated to this Contact record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profile Tags</relationshipLabel>
    <relationshipName>Contact_Profile_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>