force-app/main/default/objects/Community_Profile_Tag__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Represents the Name of the Theme that the Tag is related to.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Community_Tag__r.Community_Theme__r.Id , Community_Tag__r.Community_Theme__r.Name, &quot;_Self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Name of the Theme that the Tag is related to.</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>